--- a/src/View/samplemessage/MessageAddComunicados.form
+++ b/src/View/samplemessage/MessageAddComunicados.form
@@ -105,14 +105,13 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JTextField" name="txtTitulo">
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtTituloActionPerformed"/>
-        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtTituloKeyReleased"/>
-      </Events>
+    <Component class="View.BotonesText.CustomTextField" name="txtTitulo">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="60" y="140" width="260" height="30"/>
+          <AbsoluteConstraints x="50" y="120" width="280" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
