--- a/src/View/Application/form/LoginForm.form
+++ b/src/View/Application/form/LoginForm.form
@@ -182,7 +182,7 @@
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/View/icon/png/SAE.png"/>
+              <Image iconType="3" name="/View/icon/png/logo nuevo uwww (1).png"/>
             </Property>
           </Properties>
         </Component>
