--- a/src/View/Application/form/RecuCel.form
+++ b/src/View/Application/form/RecuCel.form
@@ -168,7 +168,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="SansSerif" size="24" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Recuperacion por SMS"/>
+        <Property name="text" type="java.lang.String" value="Recuperaci&#xf3;n por SMS"/>
       </Properties>
     </Component>
     <Component class="View.SWING.boton" name="btnRegresar">
