--- a/src/View/Application/form/other/DetObservaciones.form
+++ b/src/View/Application/form/other/DetObservaciones.form
@@ -50,10 +50,10 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="lbInfo" min="-2" max="-2" attributes="0"/>
                               <Component id="lbFecha" min="-2" pref="311" max="-2" attributes="0"/>
-                              <Component id="lbDetalle" min="-2" pref="311" max="-2" attributes="0"/>
                               <Component id="lbDocente" alignment="0" min="-2" pref="311" max="-2" attributes="0"/>
                               <Component id="lbEstudinte" alignment="0" min="-2" pref="311" max="-2" attributes="0"/>
                               <Component id="lbIdent" alignment="0" min="-2" pref="311" max="-2" attributes="0"/>
+                              <Component id="jScrollPane1" pref="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -84,9 +84,9 @@
                               <Component id="pDocente" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="lbDetalle" min="-2" pref="41" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="pDetalle" min="-2" max="-2" attributes="0"/>
+                              <Component id="jScrollPane1" pref="0" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="lbFecha" min="-2" pref="41" max="-2" attributes="0"/>
@@ -125,14 +125,6 @@
           </AuxValues>
         </Component>
         <Component class="javax.swing.JLabel" name="lbEstudinte">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="jLabel2"/>
-          </Properties>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
-          </AuxValues>
-        </Component>
-        <Component class="javax.swing.JLabel" name="lbDetalle">
           <Properties>
             <Property name="text" type="java.lang.String" value="jLabel2"/>
           </Properties>
@@ -253,7 +245,7 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
                       <Component id="jLabel5" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -261,7 +253,7 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="1" attributes="0">
+                  <Group type="102" attributes="0">
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       <Component id="jLabel5" min="-2" pref="41" max="-2" attributes="0"/>
                   </Group>
@@ -282,6 +274,24 @@
             <Property name="text" type="java.lang.String" value="Informaci&#xf3;n"/>
           </Properties>
         </Component>
+        <Container class="javax.swing.JScrollPane" name="jScrollPane1">
+          <AuxValues>
+            <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
+          </AuxValues>
+
+          <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+          <SubComponents>
+            <Component class="javax.swing.JTextArea" name="Detalle">
+              <Properties>
+                <Property name="columns" type="int" value="20"/>
+                <Property name="rows" type="int" value="5"/>
+              </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+              </AuxValues>
+            </Component>
+          </SubComponents>
+        </Container>
       </SubComponents>
     </Container>
   </SubComponents>
