--- a/src/View/Application/form/Ajustes.form
+++ b/src/View/Application/form/Ajustes.form
@@ -326,7 +326,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Seleccione el color de selector que desea utilizar en modo claro."/>
+        <Property name="text" type="java.lang.String" value="Seleccione el color de selector que desea utilizar."/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="lb">
@@ -334,7 +334,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="sansserif" size="18" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Modo Oscuro/Claro"/>
+        <Property name="text" type="java.lang.String" value="Ajustes"/>
       </Properties>
     </Component>
   </SubComponents>
